--- a/PyThon/readme
+++ b/PyThon/readme
@@ -34,3 +34,13 @@ I multiplyied each element in the array by 2 using to give the each element in d
 
 
 File test3.py
+2- Activity : You are given the test scores of 5 students across 3 subjects in a 2D NumPy array. Each row represents a student, and each column a subject. See below:
+ 
+scores = np.array([
+    [78, 85, 90],
+    [88, 79, 92],
+    [84, 76, 88],
+    [90, 93, 94],
+    [75, 80, 70]
+])
+ 
