--- a/PyThon/readme
+++ b/PyThon/readme
@@ -34,13 +34,14 @@ I multiplyied each element in the array by 2 using to give the each element in d
 
 
 File test3.py
-2- Activity : You are given the test scores of 5 students across 3 subjects in a 2D NumPy array. Each row represents a student, and each column a subject. See below:
- 
-scores = np.array([
-    [78, 85, 90],
-    [88, 79, 92],
-    [84, 76, 88],
-    [90, 93, 94],
-    [75, 80, 70]
-])
- 
+For the average score of each student, I used average function of python in scores array 
+student_average = np.round(np.average(scores, 1),2)
+In 2 dimension array 1 denotes x axis and 0 denotes y axis. For the round of the each element in array i used round library of numpy.
+And same logic has been used for subject array.
+argmax function gives the index of maximum value in the array.  
+
+: means all rows 
+-1 means the last column as in python negative indices count from the end.
+
+
+
